# sabatini-datajoint-pipeline

./: .example_dj_local_config.json  .gitignore  .readthedocs.yaml  .readthedocs.yml  Example_meta_file.toml  LICENSE  README  README.md  apt_requirements.txt  license.lic  notes.txt  pyproject.toml  requirements.txt  setup.py  testing_README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/: make-dev.sh
.github/.staging_workflows/: anchored_docker_images.yaml
.github/workflows/: docker_images.yaml  docker_test.yml  installation_test.yml
TOML-metafile-scripts/: Example_GUI_output.toml  Example_meta_file.toml  Insert_implantation.py  Insert_mouse.py  Insert_virus.py  convertTOML.py  launch.py  makeTOML.py  makeTOMLstartup.m  make_toml.mlapp
docker/: .env  docker-compose-calcium_imaging_worker.yaml  docker-compose-spike_sorting_local_worker.yaml  docker-compose-standard_worker.yaml  standard_worker.Dockerfile
docker/spike_sorting_local_worker/: EXAMPLE.network.txt  build.env  example.env
docker/standard_worker/: build.env  example.env
docs/: .readthedocs.yaml  .readthedocs.yml
docs/helpers/: behavior_pipeline.txt  create_env.txt  insertion.txt  photometry_pipeline.txt  photometry_table.txt  synced_photometry.txt  toml_dict.txt  update.txt
docs/source/: FAQ.rst  How To.rst  Installation.rst  WorkerDeployment.rst  conf.py  index.rst
notebooks/: 00-insert.ipynb  01-explore_ephys.ipynb  Photometry_and_Behavior.ipynb  calcium_imaging.ipynb  dlc.ipynb  ephys.ipynb  example_LUT.xlsx  photometry_ingestion_demo.ipynb  pipeline-architecture.ipynb  sample_ingestion.ipynb
notebooks/Legacy Notebooks/: 00-insert_ephys.ipynb  photometry_ingestion_demo.ipynb
notebooks/Oct2023 HMS Workshop/: explore_pipeline.ipynb
nvidia-driver-scripts/: install_nvidia_driver.sh  uninstall_nvidia_driver.sh
tests/: test_import.py
webapps/sciviz/: docker-compose.yaml  sciviz_specsheet.yaml
webapps/workflow-monitoring/: config.yaml  docker-compose.yaml
workflow/: __init__.py  version.py
workflow/pipeline/: __init__.py  core.py  dlc.py  ephys.py  event.py  events.py  imaging.py  ingestion.py  photometry.py  reference.py  report.py
workflow/populate/: __init__.py  ingest_events.py  notification.py  process.py  worker.py
workflow/utils/: demodulation.py  label_behavior_features.py  paths.py  photometry_preprocessing.py
workflow/utils/plotting/: ephys_plots.py  photometry_plots.py
