[build-system]
requires = ["setuptools>=62.0", "wheel>=0.37"]
build-backend = "setuptools.build_meta"

[project]
name = "sabatinilab-pipeline"
version = "0.1.0"
description = "Extracellular electrophysiology, Calcium Imaging, Fiber Photometry, DLC, Integrated behavior pipeline"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "DataJoint", email = "info@datajoint.com" },
    { name = "Sidharth Hulyalkar", email = "sidharth.hulyalkar@datajoint.com" },
    { name = "Jaerong Ahn", email = "jaerong.ahn@datajoint.com" },
    { name = "Thinh Nguyen", email = "thinh@datajoint.com" },
    { name = "Janet Berrios Wallace", email = "janet_wallace@hms.harvard.edu"},
]
keywords = ["neuroscience", "datajoint", "ephys", "calcium imaging"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "ipykernel",
    "black",
    "datajoint>=0.13.0",
    "element-lab==0.1.2",
    "element-animal @ git+https://github.com/datajoint/element-animal.git",
    "element-deeplabcut @ git+https://github.com/sidhulyalkar/element-deeplabcut.git",
    "element-session @ git+https://github.com/datajoint/element-session.git",
    "element-event @ git+https://github.com/datajoint/element-event.git",
    "element-array-ephys @ git+https://github.com/datajoint/element-array-ephys.git",
    "ecephys-spike-sorting @ git+https://github.com/datajoint/ecephys_spike_sorting.git",
    "element-calcium-imaging @ git+https://github.com/datajoint/element-calcium-imaging.git",
    "element-interface @ git+https://github.com/datajoint/element-interface.git",
    "datajoint-utilities @ git+https://github.com/datajoint-company/datajoint-utilities.git",
    "scanreader @ git+https://github.com/atlab/scanreader.git",
    "suite2p @ git+https://github.com/MouseLand/suite2p.git",
    "graphviz",
    "tdt==0.4.3",
    "tifffile==2021.11.2",
    "nd2==0.1.6",
    "seaborn==0.12.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pre-commit",
    "nox",
    "mypy",
    "notebook",
    "ipykernel",
    "djsciops @ git+https://github.com/dj-sciops/djsciops-python.git",
]


[project.scripts]
run_workflow = "workflow.populate.process:cli"

[project.urls]
Homepage = "https://github.com/bernardosabatinilab/sabatini-datajoint-pipeline"
Documentation = "https://sabatini-datajoint-pipeline.readthedocs.io/en/latest/index.html"
DataJoint = "https://docs.datajoint.org/"

[tool.setuptools]
package-data = { "*" = ["*.pyi", "py.typed"] }

[tool.setuptools.packages.find]
where = ["workflow"]
namespaces = false


[tool.black]
line-length = 88
target-version = ["py39"]
color = false
exclude = '''
/(
    \.git
    | _build
    | build
)/
'''

[tool.isort]
profile = "black"

[tool.pyright]
include = ["workflow"]
exclude = []
#ignore = ["**/*.ipynb", "notebooks"]
stubPath = "typings"
reportMissingImports = true
reportMissingTypeStubs = false